2005-04-05  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Pentax Optio 43WR (as reported)

2005-03-20  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Merged in most of the code from:
	ptpcanon 0.0.2
		 http://jalkapallo.org/superkolik/canon.html
	Capture 1.0.3
		 http://sf.net/projects/capture/
	into generic PTP property handling.

	Added camera prepare und unprepare capture handling.
	Using a gphoto widget based toggle currently.

	Disabled by using EXPERIMENTAL_CANON_CAPTURE, since
	it does not save the capture image to the FlashCard yet.


2005-03-17  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added Kodak CX7525 ( as reported).

2005-03-07  Marcus Meissner  <marcus@jet.franken.de>

	* Added Nikon D2H SLR (as reported).
	* Added PowerShot A510 (as reported).

2005-03-02  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added PowerShot S70 (as reported).

2005-02-22  Marcus Meissner  <marcus@jet.franken.de>
	
	* Added Digital IXUS 30 (as reported). 

2005-02-09  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: added Sony DSC-W1 and DSC-W12.
	added Fuji FinePix A330.
	added Sony DSC-P73.

2005-01-25  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c: 
	Vegard Engen <vegard@engen.priv.no>
	Clean up of last Nikon PTP patch.

2005-01-24  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, library.c:
	Implemented EXIF reading by using GetPartialObject.

2005-01-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.c, ptp.h:
        Merged Nikon property dumping patch from
	Steve Harris <steve@totl.net>

2005-01-23  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h: Added ptp_event_issupported helper
          function.

	* library.c: Canon IXUS 2 (and some other IXUSs) 
	  send ObjectRemoved events on deleteobject. We need
	  to read them or we hang the communication.

2005-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c:

	Vegard Engen <vegard@engen.priv.no>
	For Nikon PTP cameras: